It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Tue, Mar 24, 2009
---------------------------------------------------------------------
- Finished with [Edit Contacts] including full controller and views specs.

Mon, Mar 23, 2009
---------------------------------------------------------------------
- Finishing touches for [Edit Contacts] forms.
- Moved sidebar to the lefthand column, changes location of Sass templates.

Sat, Mar 21, 2009
---------------------------------------------------------------------
- More work on [Edit Contact] form (spec coverage pending).
- Fixed task controller specs when due tomorrow == due this week.
- Added spec coverage for [Edit Contact].
- Added [x] form control, link_to_cancel and link_to_close helpers.

Fri, Mar 20, 2009
---------------------------------------------------------------------
- More work on editing a contact.

Wed, Mar 18, 2009
---------------------------------------------------------------------
- Updated view specs to use Factories, 100% pass.
- Updated task controller specs to use Factories.
- A week of transition to [factory_girl] is over: 317 specs, all green.

Mon, Mar 16, 2009
---------------------------------------------------------------------
- Refactored leads controller specs using factories.

Sun, Mar 15, 2009
---------------------------------------------------------------------
- Started refactoring leads controller specs.

Sat, Mar 14, 2009
---------------------------------------------------------------------
- Implemented specs for Account views and Home controller.
- Implemented specs for Campaigns controller.

Fri, Mar 13, 2009
---------------------------------------------------------------------
- Implemented specs for Settings model.

Thu, Mar 12, 2009
---------------------------------------------------------------------