@@ -16,5 +16,5 @@ class AccountContact < ActiveRecord::Base
   belongs_to :contact
   validates_presence_of :account_id, :contact_id
 
-  acts_as_paranoid
+  # acts_as_paranoid
 end
