@@ -16,5 +16,5 @@ class AccountOpportunity < ActiveRecord::Base
   belongs_to :opportunity
   validates_presence_of :account_id, :opportunity_id
 
-  acts_as_paranoid
+  # acts_as_paranoid
 end
