@@ -17,5 +17,5 @@ class ContactOpportunity < ActiveRecord::Base
   belongs_to :opportunity
   validates_presence_of :contact_id, :opportunity_id
 
-  acts_as_paranoid
+  # acts_as_paranoid
 end
