@@ -58,8 +58,17 @@ class Opportunity < ActiveRecord::Base
     self.account_opportunity = AccountOpportunity.new(:account => account, :opportunity => self) unless account.id.blank?
     self.contacts << Contact.find(params[:contact]) unless params[:contact].blank?
     self.campaign = Campaign.find(params[:campaign]) unless params[:campaign].blank?
-    save_with_permissions(params[:users])
+    self.save_with_permissions(params[:users])
   end
+
+  # Backend handler for [Update Opportunity] form (see opportunity/update).
+  #----------------------------------------------------------------------------
+  def update_with_account_and_permissions(params)
+    account = Account.create_or_select_for(self, params[:account], params[:users])
+    self.account_opportunity = AccountOpportunity.new(:account => account, :opportunity => self) unless account.id.blank?
+    self.update_with_permissions(params[:opportunity], params[:users])
+  end
+
 
   # Class methods.
   #----------------------------------------------------------------------------
