@@ -4,7 +4,6 @@
   = hidden_field_tag "campaign", "#{@campaign.id if @campaign}"
   = f.hidden_field :user_id
   = f.hidden_field :assigned_to
-  = f.hidden_field :campaign_id
   = f.error_messages
   = render :partial => "opportunities/top_section", :locals => { :f => f }
   = render :partial => "opportunities/permissions", :locals => { :f => f }
@@ -12,7 +11,3 @@
     = f.submit "Create Opportunity", :onclick => %/$("opportunity_assigned_to").value = $F("account_assigned_to");/
     or
     = link_to_cancel new_opportunity_path
-
-%script{:type => "text/javascript"}
-  crm.date_select_popup("opportunity_closes_on");
-  = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
