@@ -11,7 +11,3 @@
       = f.submit "Save Opportunity", :onclick => %/$("opportunity_assigned_to").value = $F("account_assigned_to");/
       or
       = link_to_cancel edit_opportunity_path(@opportunity)
-
-%script{:type => "text/javascript"}
-  crm.date_select_popup("opportunity_closes_on");
-  = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
