@@ -10,6 +10,8 @@ if @opportunity.valid?
   end
 else
   page[:create_opportunity].replace_html :partial => "create"
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+  page.call "crm.date_select_popup", "opportunity_closes_on"
   page[:create_opportunity].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:opportunity_name].focus
 end
