@@ -1,12 +1,0 @@
-<h1>Editing opportunity</h1>
-
-<% form_for(@opportunity) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @opportunity %> |
-<%= link_to 'Back', opportunities_path %>
