@@ -1,22 +1,29 @@
 id = dom_id(@opportunity)
 
-# Show requested [Edit Opportunity] form.
-if params[:cancel].blank?                       # Called from opportunities list item...
-  if @previous                                    # Hide open [Edit Opportunity] form if any.
-    page[dom_id(@previous)].replace :partial => "opportunity", :collection => [ @previous ]
-  end
-  page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
-  page[id].replace_html :partial => "edit"        # Show [Edit Opportunity] form.
+if params[:cancel] == "true" # <----------------- Hide [Edit Opportunity]
 
-elsif params[:cancel] == "false"                # Called from title of the opportunity landing page...
-  page[:edit_opportunity].replace_html :partial => "edit"
-  page.call "crm.flip_form", :edit_opportunity, "Edit #{@opportunity.name}"
-
-# Hide [Edit Opportunity] and restore <li> with the original campaign list item.
-else
-  if request.referer =~ /\/opportunities\/\w+/  # Called from title of the opportunity landing page...
+  if request.referer =~ /\/opportunities\/\w+/    # Called from title of the opportunity landing page...
     page.call "crm.flip_form", :edit_opportunity, "#{@opportunity.name}"
-  else                                          # Called from opportunities list item...
+  else                                            # Called from opportunities list item...
     page[id].replace :partial => "opportunity", :collection => [ @opportunity ]
   end
+
+else # <----------------------------------------- Show requested [Edit Opportunity] form.
+
+  if params[:cancel].blank?                         # Called from opportunities list item...
+    if @previous                                    # Hide open [Edit Opportunity] form if any.
+      page[dom_id(@previous)].replace :partial => "opportunity", :collection => [ @previous ]
+    end
+    page.call "crm.highlight_off", id               # Disable onMouseOver for the list item.
+    page[id].replace_html :partial => "edit"        # Show [Edit Opportunity] form.
+
+  elsif params[:cancel] == "false"                # Called from title of the opportunity landing page...
+    page[:edit_opportunity].replace_html :partial => "edit"
+    page.call "crm.flip_form", :edit_opportunity, "Edit #{@opportunity.name}"
+  end
+
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+  page.call "crm.date_select_popup", "opportunity_closes_on"
+  page[:opportunity_name].focus
+
 end
