@@ -2,3 +2,5 @@ if params[:cancel] != "true"
   page[:create_opportunity].replace_html :partial => "create"
 end
 page.call "crm.flip_form", :create_opportunity
+page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+page.call "crm.date_select_popup", "opportunity_closes_on"
