@@ -1,6 +1,11 @@
-id = dom_id(@opportunity)
+if request.referer =~ /\/opportunities\/\w+/
+  id = :edit_opportunity
+else
+  id = dom_id(@opportunity)
+end
+
 if @opportunity.errors.empty?
-  if request.referer =~ /\/opportunities\/\w+/ # Opportunity landing page.
+  if id == :edit_opportunity # Opportunity landing page.
     page[:sidebar].replace_html :partial => "sidebar_show"
     page[:summary].visual_effect :shake, :duration => 0.4, :distance => 3
     page.call "crm.flip_form", :edit_opportunity, @opportunity.name
@@ -14,6 +19,8 @@ if @opportunity.errors.empty?
   end
 else  
   page[id].replace_html :partial => "edit"
+  page.call "crm.create_or_select_account", request.referer =~ /\/accounts\// || @account.id.blank?
+  page.call "crm.date_select_popup", "opportunity_closes_on"
   page[id].visual_effect :shake, :duration => 0.25, :distance => 6
   page[:opportunity_name].focus
 end
